# CKI-cell-type-identification

./: .gitignore  MANIFEST.in  NAR_SUBMISSION_CHECKLIST.md  README.md  _build_packages.py  _load_manuscript_data.py  _patch_manuscript.py  _patch_manuscript2.py  _paths.py  fix_citations.py  fix_paren.py  fix_refs_final.py  generate_cover_letter_genome_biology.py  generate_cover_letter_nar.py  generate_manuscript_genome_biology.py  generate_manuscript_nar.py  pyproject.toml  run_all.py
cki/: __init__.py  bootstrap.py  core.py  gene_sets.py  preprocess.py  species.py  utils.py
data/: README_data.md
notebooks/: 01_pilot_mouse.py  01_tissue_omega_matrix.py  01b_hk_stability.py  01c_hk_overlap.py  02_ct_pilot.py  02b_pilot_v2.py  02c_pilot_v2b.py  03_full_matrix.py  04_phase32_sweep.py  05_phase33_human.py  05_phase33_v2.py  05_phase33_v3.py  05_phase33_v3_fixed.py  05b_phase33_diagnose.py  05c_phase33_diag_light.py  06_phase34_tcga.py  06_phase34_v2.py  07_brain_siletti_analysis.py  07_phase34_clinical.py  07b_brain_siletti_v2.py  07c_brain_siletti_v3.py  07d_brain_siletti_v4.py  08a_tcga_bootstrap.py  08a_tcga_permutation.py  08b_human_bootstrap_csv.py  08c_brain_bootstrap.py  08c_brain_bootstrap_csv.py  100_fix_docx.py  101_fix_js.py  101_fix_js_v2.py  101_fix_js_v3.py  102_patch_docx_v2.py  103_fix_docx_v2.py  104_fix_docx_v3.py  105_md_to_docx.py  105_md_to_docx_v2.py  106_simple_md_to_docx.py  107_build_docx_minimal.py  107_minimal_md_to_docx.py  13_phase35_method_comparison.py  (+91 more)
results/: CKI_Reproducibility.ipynb  CKI_Reproducibility_Guide.md  CKI_Reproducibility_Guide_v1.docx  (+55 more)
(+8 files in other folders)
