[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cki"
version = "0.2.0"
description = "Cell-state Kinetic Index: A Ka/Ks-inspired framework for quantifying selective transcriptomic remodeling"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Li Zhang", email = "knightz@pumc.edu.cn"}
]
keywords = ["single-cell", "transcriptomics", "cell-state", "evolutionary-biology", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23.0",
    "scipy>=1.10.0",
    "scanpy>=1.9.0",
    "anndata>=0.8.0",
    "tqdm>=4.64.0",
    "python-docx>=0.8.11",
]

[project.optional-dependencies]
analysis = ["pandas>=1.5.0", "matplotlib>=3.6.0", "seaborn>=0.12.0", "scikit-learn>=1.2.0"]
pathway = ["gseapy>=1.0.0"]
all = ["cki[analysis,pathway]"]

[project.urls]
Repository = "https://github.com/zhanglknt/CKI-cell-type-identification"

[tool.setuptools]
packages = ["cki", "cki.data"]
include-package-data = true

[tool.setuptools.package-data]
cki = ["data/*.csv"]
